2008-05-26  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/registry.py:
	Fix a typo, bundle->b

2008-05-26  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/command/main.py:
	* flumotion/common/dag.py:
	* flumotion/common/package.py:
	* flumotion/common/registry.py:
	* flumotion/manager/manager.py:
	Use list comprehensions instead of filter + lambda combination.

2008-05-26  Johan Dahlin  <johan@flumotion.com>

	* flumotion/manager/manager.py (Vishnu.deleteFlow): Remove
	lisp cruft, use a simpler pythonic approach.
	* flumotion/test/test_manager_manager.py (TestVishnu.testDeleteFlow):
	Add test for this function

	* flumotion/admin/gtk/client.py (MAIN_UI): Make
	separator names unique and fix wizard.run() call,
	now when interactive keyword arg is removed.

2008-05-23  Johan Dahlin  <johan@flumotion.com>

	* flumotion/ui/wizard.py (SectionWizard.run):
	* flumotion/wizard/configurationwizard.py:
	(ConfigurationWizard.run):
	Remove interactive cruft, which is unused.

	* flumotion/component/consumers/httpstreamer/wizard_gtk.py:
	* flumotion/component/encoders/dirac/wizard_gtk.py:
	* flumotion/component/encoders/jpeg/wizard_gtk.py:
	* flumotion/component/encoders/mulaw/wizard_gtk.py:
	* flumotion/component/encoders/smoke/wizard_gtk.py:
	* flumotion/component/encoders/theora/wizard_gtk.py:
	* flumotion/component/encoders/vorbis/wizard_gtk.py:
	* flumotion/component/producers/audiotest/wizard_gtk.py:
	* flumotion/component/producers/bttv/wizard_gtk.py:
	* flumotion/component/producers/firewire/wizard_gtk.py:
	* flumotion/component/producers/soundcard/wizard_gtk.py:
	* flumotion/component/producers/videotest/wizard_gtk.py:
	* flumotion/component/producers/webcam/wizard_gtk.py:
	* flumotion/ui/wizard.py:
	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/consumptionsteps.py:
	* flumotion/wizard/conversionsteps.py:
	* flumotion/wizard/ondemandstep.py:
	* flumotion/wizard/overlaystep.py:
	* flumotion/wizard/productionsteps.py: